--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "diglactic/laravel-breadcrumbs": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "diglactic/laravel-breadcrumbs": "^10.0",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "tightenco/ziggy": "^2.5",
+        "yajra/laravel-datatables-oracle": "^10.3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
